--- a/homeworks/HW4.ipynb
+++ b/homeworks/HW4.ipynb
@@ -376,7 +376,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "While Linear regression has limited applicability in business situations because it can work only when the dependent variable is of continuous nature."
+    "Lİnear regression can not be used on Sonar dataset that has a 59 column "
    ]
   }
  ],
