--- a/homeworks/HW4.ipynb
+++ b/homeworks/HW4.ipynb
@@ -376,8 +376,15 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Lİnear regression can not be used on Sonar dataset that has a 59 column "
+    "Lİnear regression can not be used on Sonar dataset that has not continuos dependent variable."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
