--- a/homeworks/HW4.ipynb
+++ b/homeworks/HW4.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,24 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[26  3]\n",
-      " [29 11]]\n"
+      "[[ 5 27]\n",
+      " [10 27]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5362318840579711"
+       "0.463768115942029"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18 11]\n",
-      " [ 3 37]]\n",
-      "0.7971014492753623\n"
+      "[[22 10]\n",
+      " [ 9 28]]\n",
+      "0.7246376811594203\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "-Result is bad,It did't worked because of We tried to aprroaching to Supervised data with an clustering algorithm."
+    "-Result is bad,It did't worked because of We tried to aprroaching to Supervised data with an clustering algorithm.\n"
    ]
   },
   {
@@ -307,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Naive bayes algorithm:  0.6956521739130435\n"
+      "Accuracy of Naive bayes algorithm:  0.5942028985507246\n"
      ]
     }
    ],
@@ -351,21 +351,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[23 10]\n",
-      " [ 6 30]]\n",
-      "0.7681159420289855\n"
+      "[[24 16]\n",
+      " [ 8 21]]\n",
+      "0.6521739130434783\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "#libraries\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "#creating logistic regression function\n",
     "multiple_logreg=LogisticRegression()\n",
@@ -379,7 +379,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "-Consequently it is good result."
