--- a/homeworks/HW4.ipynb
+++ b/homeworks/HW4.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- First cell importing libraries \n",
+    "- First cell importing libraries- \n",
     "- Splitting the data and setting to train test split\n",
     "- Creating and using Kmeans algorithm with 2 cluster\n",
     "- fitting the data and predicting the data \n",
